# tinyso

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  tinypso.hpp  tinyso.hpp  tinysoa.hpp
b/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  tinyso-runner
b/Testing/Temporary/: CTestCostData.txt
test/: reaching.hpp  test-ga.cpp  test-pso-multi-gauss.cpp  test-pso-multi-heavy-tail.cpp  test-pso-single-heavy-tail.cpp  test-pso.cpp
